--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - "8000:8000"
     environment:
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+      - POSTGRES_HOST=postgres
+      - POSTGRES_HOSTNAME=postgres
       - TESSDATA_PREFIX=/usr/share/tesseract-ocr/5/tessdata
       - TESSERACT_CMD=/usr/bin/tesseract
       - POPPLER_PATH=/usr/bin
